--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
    <body>
       <main>
          <audio id="audio" controls></audio>
+         <p>РСЛНДНГТВЗМ - Gothic Castle Delirium</p>
+         <p>Музыка взята с лейбла tapes for slaves</p>
+         <p>ссылка на лейбл - https://vk.com/tapesforslaves</p>
+         <p>
+            представитель лейбла tapes for slaves разрешил использовать музыку с
+            этого лейбла на онлайн радио "Финистер Радио"
+         </p>
       </main>
    </body>
 </html>
