--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
    <body>
       <main>
          <audio id="audio" controls></audio>
-         <p>РСЛНДНГТВЗМ - Gothic Castle Delirium</p>
+         <p>
+            1. РСЛНДНГТВЗМ - Gothic Castle Delirium,
+				2. Дневник школьницы - Дневник школьницы,
+				3. Entelechia - Metanoia
+         </p>
          <p>Музыка взята с лейбла tapes for slaves</p>
          <p>ссылка на лейбл - https://vk.com/tapesforslaves</p>
          <p>
