--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,28 @@
    </head>
    <body>
       <main>
+         <img src="./img/logo.png" alt="логотип Финистер Радио" />
          <audio id="audio" controls></audio>
-         <p>
-            1. РСЛНДНГТВЗМ - Gothic Castle Delirium,
-				2. Дневник школьницы - Дневник школьницы,
-				3. Entelechia - Metanoia
-         </p>
+         <ul>
+            <li>1. РСЛНДНГТВЗМ - Gothic Castle Delirium,</li>
+            <li>2. Дневник школьницы - Дневник школьницы,</li>
+            <li>3. Entelechia - Metanoia</li>
+            <li>4. Fleckentarn - Deuil Septembre</li>
+            <li>5. Kuutamo/КИСТЕНЬ - Звёздная пыль и сырая земля</li>
+            <li>6. Семаргл - Семаргл</li>
+            <li>7. СОЛНЦЕСЕРДИЕ - УЗМОРСКИЕ СУМЕРКИ</li>
+         </ul>
          <p>Музыка взята с лейбла tapes for slaves</p>
-         <p>ссылка на лейбл - https://vk.com/tapesforslaves</p>
          <p>
-            представитель лейбла tapes for slaves разрешил использовать музыку с
-            этого лейбла на онлайн радио "Финистер Радио"
+            Ссылка на лейбл -
+            <a href="https://vk.com/tapesforslaves">
+               https://vk.com/tapesforslaves
+            </a>
+         </p>
+         <p>
+            Представитель лейбла <strong>tapes for slaves</strong> разрешил
+            использовать музыку с этого лейбла на онлайн радио
+            <strong>"Финистер Радио"</strong>
          </p>
       </main>
    </body>
