--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,13 @@
    </head>
    <body>
       <main>
-         <img src="./img/logo.png" alt="логотип Финистер Радио" />
+         <div>
+            <img
+               src="./img/logo.png"
+               width="600"
+               alt="логотип Финистер Радио"
+            />
+         </div>
          <audio id="audio" controls></audio>
          <ul>
             <li>1. РСЛНДНГТВЗМ - Gothic Castle Delirium,</li>
