--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,16 @@
             />
          </div>
          <audio id="audio" controls></audio>
-         <ul>
+         <p>
+            <b>Песня: </b>
+            <span class="songName"></span>
+         </p>
+         <p>
+            <b>Автор: </b>
+            <span class="authorName"></span>
+         </p>
+
+         <!-- <ul>
             <li>1. РСЛНДНГТВЗМ - Gothic Castle Delirium,</li>
             <li>2. Дневник школьницы - Дневник школьницы,</li>
             <li>3. Entelechia - Metanoia</li>
@@ -24,7 +33,7 @@
             <li>5. Kuutamo/КИСТЕНЬ - Звёздная пыль и сырая земля</li>
             <li>6. Семаргл - Семаргл</li>
             <li>7. СОЛНЦЕСЕРДИЕ - УЗМОРСКИЕ СУМЕРКИ</li>
-         </ul>
+         </ul> -->
          <p>Музыка взята с лейбла tapes for slaves</p>
          <p>
             Ссылка на лейбл -
