--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta name="theme-color" content="#000" />
+      <meta name="theme-color" content="#1d4ed8" />
       <title>Финистер Радио</title>
       <link rel="icon" type="image/png" href="./img/favicon.png" />
    </head>
@@ -15,6 +15,7 @@
                   <img
                      class="cassette"
                      src="./img/cassette-wrap.svg"
+                     width="510"
                      alt="Кассетный проигрыватель"
                   />
                   <img
@@ -27,7 +28,11 @@
                      class="cassette__disc cassette__disc--right"
                      width="32.5"
                   />
-                  <img src="./img/glass.png" class="cassette__glass" />
+                  <img
+                     src="./img/glass.png"
+                     width="474"
+                     class="cassette__glass"
+                  />
 
                   <ul class="cassette__controls">
                      <li class="cassette__button">
@@ -51,9 +56,12 @@
 
             <ul class="content__list">
                <li class="content__item content__item--label">
-                  <h2 class="content__name">Лейбл:</h2>
-                  <div class="content__wrap content__value">
+                  <div class="content__wrap">
+                     <h2 class="content__name">Лейбл:</h2>
                      <h1 class="label__name">tapes for slaves</h1>
+                  </div>
+
+                  <div class="label__links">
                      <a
                         class="content__link"
                         href="https://vk.com/tapesforslaves"
