--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
    </head>
    <body>
       <main>
-         <div class="wrapper">
+         <div class="container">
             <div class="cassette">
                <div class="cassette__player">
                   <img
@@ -76,16 +76,16 @@
                <li class="content__item content__item--song">
                   <div class="content__wrap">
                      <h2 class="content__name">Песня:</h2>
-                     <p class="content__value songName">Entering the Castle</p>
+                     <p class="content__value songName"></p>
                   </div>
 
                   <div class="content__wrap">
                      <h2 class="content__name">Автор:</h2>
-                     <p class="content__value authorName">РСЛНДНГТВЗМ</p>
+                     <p class="content__value authorName"></p>
                   </div>
                </li>
 
-               <li class="content__item">
+               <li class="content__item content__item--dev">
                   <div class="content__wrap">
                      <h2 class="content__name">Разработчик:</h2>
                      <a
