--- a/src/index.html
+++ b/src/index.html
@@ -29,25 +29,16 @@
                      width="32.5"
                   />
                   <img
-                     src="./img/glass.png"
+                     src="./img/cassette-glass.png"
                      width="474"
                      class="cassette__glass"
                   />
 
                   <ul class="cassette__controls">
                      <li class="cassette__button">
-                        <span class="cassette__button-name">Запись</span>
+                        <span class="cassette__button-name">Play</span>
                         <button
-                           class="cassette__button-key"
-                           aria-name="play"
-                        ></button>
-                     </li>
-
-                     <li class="cassette__button">
-                        <span class="cassette__button-name">Пауза</span>
-                        <button
-                           class="cassette__button-key"
-                           aria-name="pause"
+                           class="cassette__button-key cassette__button-key--play"
                         ></button>
                      </li>
                   </ul>
@@ -76,7 +67,7 @@
                <li class="content__item content__item--song">
                   <div class="content__wrap">
                      <h2 class="content__name">Песня:</h2>
-                     <p class="content__value songName"></p>
+                     <p class="content__value audioName"></p>
                   </div>
 
                   <div class="content__wrap">
