--- a/src/index.html
+++ b/src/index.html
@@ -15,33 +15,41 @@
                   <img
                      class="cassette"
                      src="./img/cassette-wrap.svg"
-                     width="510"
-                     alt="Кассетный проигрыватель"
+                     width="366"
+                     alt="Кассетный магнитофон"
                   />
                   <img
                      src="./img/cassette-disc.png"
                      class="cassette__disc cassette__disc--left"
-                     width="32.5"
+                     width="31.5"
                   />
                   <img
                      src="./img/cassette-disc.png"
                      class="cassette__disc cassette__disc--right"
-                     width="32.5"
+                     width="31.5"
                   />
                   <img
                      src="./img/cassette-glass.png"
-                     width="474"
+                     width="346"
                      class="cassette__glass"
                   />
 
-                  <ul class="cassette__controls">
-                     <li class="cassette__button">
-                        <span class="cassette__button-name">Play</span>
-                        <button
-                           class="cassette__button-key cassette__button-key--play"
-                        ></button>
-                     </li>
-                  </ul>
+                  <button class="cassette__button-play">
+                     <span class="cassette__button-play-inner">
+                        <svg
+                           class="cassette__button-play-icon"
+                           xmlns="http://www.w3.org/2000/svg"
+                           width="30"
+                           height="30"
+                           fill="none"
+                        >
+                           <path
+                              fill="#E2E8F0"
+                              d="M9.125 6.25v17.5L22.875 15 9.125 6.25Z"
+                           />
+                        </svg>
+                     </span>
+                  </button>
                </div>
             </div>
 
