--- a/src/index.html
+++ b/src/index.html
@@ -35,20 +35,7 @@
                   />
 
                   <button class="cassette__button-play">
-                     <span class="cassette__button-play-inner">
-                        <svg
-                           class="cassette__button-play-icon"
-                           xmlns="http://www.w3.org/2000/svg"
-                           width="30"
-                           height="30"
-                           fill="none"
-                        >
-                           <path
-                              fill="#E2E8F0"
-                              d="M9.125 6.25v17.5L22.875 15 9.125 6.25Z"
-                           />
-                        </svg>
-                     </span>
+                     <span class="cassette__button-play-inner"></span>
                   </button>
                </div>
             </div>
